--- a/GitSampleProject/GitSampleProject/GitSampleProject.csproj
+++ b/GitSampleProject/GitSampleProject/GitSampleProject.csproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="ChangesDetails.txt" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
